istio/destination.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: apps
spec:
  host: apps
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
