istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-gateway
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: apps
        port:
          number: 8080 # Assuming your service exposes port 4000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway # Assuming this label selector matches your ingress gateway
  servers:
  - hosts:
    - "*"
    port:
      number: 80 # Assuming your ingress gateway listens on port 80
      name: http
      protocol: HTTP
